<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/widgets_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/MyWidgetsText"
        android:textSize="30dp"

        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"/>




    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/widgets_text"
        android:text="@string/ButtonText" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/flag"
        android:layout_toRightOf="@id/button1"
        android:layout_below="@id/widgets_text"/>

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageButton"
        android:layout_marginTop="8dp"
        android:text="@string/CheckOutMessage" />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageButton"
        android:layout_marginStart="88dp"
        android:layout_marginTop="11dp"
        android:layout_toEndOf="@id/checkBox"
        android:gravity="fill"
        android:text="@string/SwitchMessage" />

    <EditText
        android:id="@+id/plain_text_input"
        android:layout_width="match_parent"
        android:layout_height="71dp"
        android:layout_below="@id/checkBox"
        android:hint="@string/HintMessage"
        android:inputType="textPersonName" />

</RelativeLayout>